# Project-Cube

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.2.5pre1  Doxyfile  Project-Cube-Qt.pro  Project-Cube-Qt.pro.user.2.6pre1  README  camera.txt
BambooEngine/include/: AssimpWrapper.h  Camera.h  GLUtils.h  GeometryData.h  Graphic-GlfwWindow.h  Graphic-QtWidgetWrapper.h  Graphic.h  INodeTranslator.h  IRenderNode.h  KeyIdentifiers.h  LightManager.h  Scene.h  ShaderManager.h  TextureManager.h  common_gl.h  memory-c++11.h  prevent_old_opengl.h
BambooEngine/shaders/: basic_shading.fs  basic_shading.vs  bounding-box.vs  camera-debug.fs  camera-debug.vs  camera-debug2.fs  camera-debug2.vs  deferred_pass.frag  deferred_pass.vert  deferred_pass_cm.frag  deferred_pass_cm.geom  deferred_pass_cm.vert  directwrite.fs  directwrite.vs  generic1.fs  generic1.vs  light_pass.fs  light_pass.vs  posteffect1.fs
BambooEngine/src/: AssimpWrapper.cpp  AssimpWrapper.cpp.autosave  Camera.cpp  GeometryData.cpp  Graphic-GlfwWindow.cpp  Graphic-QtWidgetWrapper.cpp  Graphic.cpp  LightManager.cpp  RenderNode.cpp  Scene.cpp  Shader.cpp  ShaderManager.cpp  TextureManager.cpp
BambooLib/include/: BinarySerializer.h  ConstrainedKeyValueMap.h  CoreSystem.h  GeneralDefinitions.h  IIdentifyable.h  ISerializer.h  IStreamable.h  KeyValueMap.h  Logger.h
BambooLib/src/: BinarySerializer.cpp  ConstrainedKeyValueMap.cpp  CoreSystem.cpp  KeyValueMap.cpp  Logger.cpp
config/: config.xml  core-settings.xml
doc/: README
include/: Camera.h  Error.h  EventManager.h  EventManager2.h  Events.h  HashedString.h  IInputEventListener.h  IObject.h  IXMLSerializeable.h  Logger.h  LuaManager.h  MainApp.h  PC_Logger.h  ProcessManager.h  Settings.h  Settings2.h  lua_include.h
lua/: functions.lua  level1.lua  test.lua
luaponte/: adopt_policy.hpp  back_reference.hpp  back_reference_fwd.hpp  class.hpp  class_info.hpp  config.hpp  container_policy.hpp  copy_policy.hpp  dependency_policy.hpp  discard_result_policy.hpp  error.hpp  exception_handler.hpp  from_stack.hpp  function.hpp  get_main_thread.hpp  get_pointer.hpp  handle.hpp  iterator_policy.hpp  lua_include.hpp  luaponte.hpp  make_function.hpp  nil.hpp  no_dependency.hpp  object.hpp  open.hpp  operator.hpp  out_value_policy.hpp  prefix.hpp  raw_policy.hpp  return_reference_to_policy.hpp  scope.hpp  shared_ptr_converter.hpp  tag_function.hpp  typeid.hpp  value_wrapper.hpp  version.hpp  weak_ref.hpp  wrapper_base.hpp  yield_policy.hpp
models/: bunte-treppe.3ds  bunte-treppe.dae  bunte-treppe2.3ds  bunte-treppe2.dae  bunte-treppe3.dae  everything.blend  freepool-ng-table.3ds  pool_sphere.blend  pool_sphere.blend1  pool_sphere.blend2  pool_sphere.dae  table.dae  treppe3.blend  untitled.blend
patched_glfw/: README  glfw-2.7-patched.tar.bz2
scripts/: test1.lua  test2.lua
shaders/: assimp_deep_step2.fs  basic_shading.fs  basic_shading.vs  bloom_combine.fs  bloom_step1.fs  camera-debug.fs  phong_shading.fs  phong_shading.vs  posteffect1.fs  simple-shading.fs  test-shading.fs  test-shading.vs  volumevis-fluidcube.vs  volumevis-raycaster.fs
src/: CMakeLists.txt  Camera.cpp  EventManager.cpp  EventManager2.cpp  Events.cpp  HashedString.cpp  Logger.cpp  LuaManager.cpp  Main.cpp  MainApp.cpp  PC_Logger.cpp  ProcessManager.cpp  Settings.cpp  Settings.h  Settings2.cpp
src/DummyGame/: Game.cpp  SampleObject.cpp
src/Gamelogic/: Cube.cpp  Cube.h  Grid.cpp  Grid.h  Level.cpp
src/Gamelogic/Objects/: LightObject.cpp  Object.cpp
src/Graphics/: Graphic-GlfwWindow.cpp  Graphic-QtWidgetWrapper.cpp  Graphic.cpp  Graphics.cpp  RenderNode.cpp  SceneObject.cpp  Shader.cpp  ShaderManager.cpp  TextureManager.cpp
src/Graphics/RenderNodes/: RenderNode_AssimpImport.cpp  RenderNode_BoundingBox.cpp  RenderNode_Camera.cpp  RenderNode_Cube.cpp  RenderNode_EmptyNode.cpp  RenderNode_FBO.cpp  RenderNode_PostEffect.cpp  RenderNode_RenderPass.cpp
src/Graphics/RenderNodes/not_used_atm/: SceneObject_VolumeVisColorCube.cpp
src/Graphics/SceneObjects/: Cube.cpp  LoadedModel.cpp  SceneObject_AssimpImport.cpp  SceneObject_BoundingBox.cpp  SceneObject_Camera.cpp  SceneObject_Cube.cpp  SceneObject_EmptyNode.cpp  SceneObject_FBO.cpp  SceneObject_FluidDynamicsStep.cpp  SceneObject_PostEffect.cpp  SceneObject_RenderPass.cpp
src/Graphics/SceneObjects/.svn/: all-wcprops  entries
src/Graphics/SceneObjects/.svn/text-base/: SceneObject_AssimpImport.cpp.svn-base  SceneObject_AssimpImport.h.svn-base  SceneObject_BoundingBox.cpp.svn-base  SceneObject_BoundingBox.h.svn-base  SceneObject_BoundingSphere.cpp.svn-base  SceneObject_BoundingSphere.h.svn-base  SceneObject_Camera.cpp.svn-base  SceneObject_Camera.h.svn-base  SceneObject_EmptyNode.cpp.svn-base  SceneObject_EmptyNode.h.svn-base  SceneObject_FBO.cpp.svn-base  SceneObject_FBO.h.svn-base  SceneObject_FluidDynamics.cpp.svn-base  SceneObject_FluidDynamics.h.svn-base  SceneObject_FluidDynamicsStep.cpp.svn-base  SceneObject_FluidDynamicsStep.h.svn-base  SceneObject_LightSphere.cpp.svn-base  SceneObject_LightSphere.h.svn-base  SceneObject_PostEffect.cpp.svn-base  SceneObject_PostEffect.h.svn-base  SceneObject_RenderPass.cpp.svn-base  SceneObject_RenderPass.h.svn-base  SceneObject_Sphere.cpp.svn-base  SceneObject_Sphere.h.svn-base  SceneObject_VolumeVisColorCube.cpp.svn-base  SceneObject_VolumeVisColorCube.h.svn-base  SceneObject_VolumeVisRaycaster.cpp.svn-base  SceneObject_VolumeVisRaycaster.h.svn-base
src/Graphics/SceneObjects/not_used_atm/: SceneObject_BoundingSphere.cpp  SceneObject_FluidDynamics.cpp  SceneObject_LightSphere.cpp  SceneObject_Sphere.cpp  SceneObject_VolumeVisRaycaster.cpp
src/gui/: MainWindow.cpp
test/: CubeTest.cpp  CubeTest.h  GridTest.cpp  GridTest.h  LevelTest.cpp  LevelTest.h  TestMain.cpp  TestMain.h
textures/: .directory  cube_texture2_n.xcf  terrain_colors.xcf
useful_classes/: Logger.cpp  Logger.h  README  Settings.cpp  Settings.h  Shader.cpp  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  common_gl.h
visual studio files/: Project Cube.sln  Project Cube.vcxproj  Project Cube.vcxproj.filters  log.txt
(+233 files in other folders)
